appId: com.pikume.mobile
name: Login smoke
---
- launchApp:
    clearState: true
    clearKeychain: true
- assertVisible:
    id: "bottom-tab-login"
- tapOn:
    id: "bottom-tab-login"
- assertVisible:
    id: "login-email-input"
- tapOn:
    id: "login-email-input"
- inputText: "test@gmail.com"
- tapOn:
    id: "login-password-visibility-toggle"
- pressKey: Enter
- inputText: "1"
- hideKeyboard
- tapOn:
    id: "login-submit-button"
- tapOn:
    text: "허용 안 함"
    optional: true
- assertVisible:
    id: "bottom-tab-more"
