appId: com.pikume.mobile
name: Password reset smoke
---
- launchApp:
    clearState: true
    clearKeychain: true
- assertVisible:
    id: "bottom-tab-login"
- tapOn:
    id: "bottom-tab-login"
- tapOn:
    id: "login-password-reset-link"
- assertVisible:
    id: "password-reset-email-input"
- tapOn:
    id: "password-reset-email-input"
- inputText: "test@gmail.com"
- tapOn:
    id: "password-reset-send-verification-button"
- assertVisible:
    id: "password-reset-verification-code-input"
- tapOn:
    id: "password-reset-verification-code-input"
- inputText: "123456"
- tapOn:
    id: "password-reset-verify-code-button"
- assertVisible:
    id: "password-reset-password-input"
- tapOn:
    id: "password-reset-password-visibility-toggle"
- tapOn:
    id: "password-reset-password-confirm-visibility-toggle"
- tapOn:
    id: "password-reset-password-input"
- inputText: "password123!"
- tapOn:
    id: "password-reset-password-confirm-input"
- inputText: "password123!"
- tapOn:
    id: "password-reset-submit-button"
- assertVisible:
    id: "login-email-input"
